package com.project.ThirdAttempt;

public class Diesel implements FuelType {

    @Override
    public String display() {
        return "This vehicle runs with Diesel";
    }
}
