package com.project.ThirdAttempt;

public class Air implements FuelType {

    @Override
    public String display() {
        return "This vehicle runs with Air";
    }
}
