package com.project.ThirdAttempt;

public class Bicycle extends Vehicle {
    public Bicycle(){
        super();
        fuelType = new Air();
    }
}
