package com.project.ThirdAttempt;

public class Bike extends Vehicle{
    public Bike(){
        super();
        fuelType = new Petrol();
    }
}
