package com.project.ThirdAttempt;

public class Car extends Vehicle {
    public Car(){
        super();
        fuelType = new Diesel();
    }
}
