package com.project.ThirdAttempt;

public interface FuelType {
    String display();
}
