package com.project.ThirdAttempt;

public class Petrol implements FuelType {

    @Override
    public String display() {
        return "This vehicle runs with Petrol";
    }
}
